# old-prague-photos

./: .env.example  .gitignore  GROUPING_PLAN.md  README.md  TODO.md  app.py  batch_geolocate.py  build_similarity.py  check.py  cli.py  collect.py  dezoomify.py  download_archive_images.py  export.py  filter.py  geolocate.py  hello.py  helpers.py  ops.sh  process.py  pyproject.toml  requirements.txt  run.py  wrangler.toml
docs/: web-app.md
functions/api/: config.js  corrections.js  merges.js  verify.js  zoomify.js
migrations/: 0001_init.sql  0002_verdict.sql  0003_group_id.sql  0004_merges.sql
output/: available_record_ids.json  batch_request_1767618496.jsonl  batch_request_1767619827.jsonl  batch_request_1767712690.jsonl  batch_request_1767728695.jsonl  batch_request_1768686861.jsonl  batches.json  nav_partition_progress.json  old_prague_photos.csv  prompts.json
output/batch_results/: batches_08bcgysg6k0ucjq3yn7b8chvknvs929yn5l2.jsonl  batches_roqzow8wcpi0o7mbvopzsa57lo4foqlmmlal.jsonl  batches_vp2qtpgczw76wjaxfbofazhsk4jyr8woq449.jsonl
output/filtered/: records_with_cp.json  records_with_cp_in_record_obsah.json  records_without_cp.json  records_without_dilo.json
output/geolocation/: unresolved.json
output/raw_records/: 00080A3A73C911E3B7C100110989F46F.json  00110F67D6D411E89BFA74D435EEBE90.json  0012D04FA3AB11E3A35E0024BE7CD9AC.json  00144678EF6211E5A520000C76270B94.json  0021CE25332611E2BF04525400E46D25.json  002322E8769411E2BF17525400E46D25.json  0026A75307B511E28BD16C626D41E503.json  003EFE5621E311E2A1E8406186009F3A.json  0040E6EEBE5A11E3BF7C406186009F3A.json  0044DA471DE111E2BCB36C626D41E503.json  0055A955A9FB11E3A5D2406186009F3A.json  0059C64B362B11E1BECE000C766D2371.json  006F2F2887DA11E2BF21525400E46D25.json  007D51AF640C11E89CE474D435EEBE90.json  009B90FC306C11E99E6A74D435EEBE90.json  00A19A27077811E48CE60024BE7CD9AC.json  00A3368E9E9B11E1AB206C626D41E503.json  00AC50CDE27111E3A5BD406186009F3A.json  00F6E067227C11E6AC04406186009F3A.json  (+13328 more)
scripts/: r2_sync.sh
viewer/: app.py  build_geojson.py
(+16831 files in other folders)
