[project]
name = "old-prague-photos"
version = "0.1.0"
description = "Scrape, process, and geolocate historical photos of Prague from the City Archives"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "litellm>=1.56.0",
    "lxml>=6.0.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "typer>=0.15.0",
]

[project.scripts]
prague-photos = "run:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["run.py", "collect.py", "filter.py", "geolocate.py", "export.py", "check.py", "dezoomify.py", "src"]
