[project]
name = "old-prague-photos"
version = "0.1.0"
description = "Scrape, process, and geolocate historical photos of Prague from the City Archives"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "fastapi>=0.115.0",
    "litellm>=1.56.0",
    "lxml>=6.0.0",
    "pandas>=2.3.1",
    "pillow>=10.4.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "typer>=0.15.0",
    "uvicorn>=0.30.0",
    "google-genai>=1.34.0",
    "watchfiles>=1.1.1",
]

[project.scripts]
cli = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli.py", "collect.py", "filter.py", "geolocate.py", "export.py", "check.py", "dezoomify.py", "src"]
